[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/scroll.gd" type="Script" id=1]
[ext_resource path="res://scripts/import_list.gd" type="Script" id=2]

[node name="import_list" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 40 )
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="panel" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="hbox" type="HBoxContainer" parent="margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1915.0
margin_bottom = 1075.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="all_button" type="Button" parent="margin/hbox"]
margin_right = 51.0
margin_bottom = 1070.0
text = "  ALL  "

[node name="vsep" type="VSeparator" parent="margin/hbox"]
margin_left = 55.0
margin_right = 59.0
margin_bottom = 1070.0
mouse_filter = 2

[node name="scroll" type="ScrollContainer" parent="margin/hbox"]
margin_left = 63.0
margin_right = 1910.0
margin_bottom = 1070.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_vertical_enabled = false
script = ExtResource( 1 )

[node name="button_list" type="HBoxContainer" parent="margin/hbox/scroll"]
margin_right = 1847.0
margin_bottom = 1070.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="button_up" from="margin/hbox/all_button" to="." method="_on_all_button_button_up"]
